[package]
name = "TestNats"
version = "0.1.0"
authors = ["trvinh99 <48145607+shint1001@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bastion = { git = "https://github.com/bastion-rs/bastion.git" }
nats = { git = "https://github.com/trvinh99/nats.rs-1.git", branch="main" }
smol = "*"
openssl = "0.10.28"
tokio="*"
tracing-appender = "0.1.2"
serde_json = "*"
simple-logging="*"
log = "0.4.14"
serde="*"
dashmap = "*"
fastrand = "*"
